Fix nav item to have proper spacing

--- a/main_page/static/css/common.css
+++ b/main_page/static/css/common.css
@@ -71,7 +71,7 @@ a {
         display: none;
     }
 }
-.navitem:nth-child(6) {
+.navitem:last-child {
     margin-left: 0;
 }
 .navlink {
